seperate swagger folder generated
