# storage/api-docs/api-docs.json
@@ -1,22 +1,10 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Laravel OpenApi Demo Documentation",
-        "description": "L5 Swagger OpenApi description",
-        "contact": {
-            "email": "admin@admin.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "Your super  ApplicationAPI",
         "version": "1.0.0"
     },
     "servers": [
-        {
-            "url": "http://my-default-host.com",
-            "description": "Demo API Server"
-        },
         {
             "url": "https://lunch-api.dev.local"
         }
@@ -140,10 +128,10 @@
         "/lunch-taken": {
             "post": {
                 "tags": [
-                    "RecordController"
+                    "LunchDateController"
                 ],
-                "summary": "lunch taken or not",
-                "operationId": "lunch_taken",
+                "summary": "shows offdays to user",
+                "operationId": "off-day",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -163,13 +151,10 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successfully Taken Lunch",
+                        "description": "Offdays",
                         "content": {
                             "application/json": {}
                         }
-                    },
-                    "409": {
-                        "description": "You already taken lunch"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -186,32 +171,5 @@
                 }
             }
         }
-    },
-    "components": {
-        "schemas": {
-            "LunchDate": {
-                "title": "Project",
-                "description": "Project model",
-                "properties": {
-                    "id": {
-                        "title": "ID",
-                        "description": "ID",
-                        "type": "integer",
-                        "format": "int64",
-                        "example": 1
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "Project"
-                }
-            }
-        }
-    },
-    "tags": [
-        {
-            "name": "Projects",
-            "description": "API Endpoints of Projects"
-        }
-    ]
+    }
 }
